# embassy

examples/qemu-stm32f4-netduinoplus2/: Cargo.toml  build.rs
examples/qemu-stm32f4-netduinoplus2/.cargo/: config.toml
examples/stm32f1-qemu/: Cargo.toml  cargo  debug  gdb  qemu
examples/stm32f1-qemu/.cargo/: config.toml
