[package]
edition = "2021"
name = "embassy-qemu-stm32f4-netduinoplus2-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Specific examples only for stm32f405rg
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = ["stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-executor = { version = "0.5.0", path = "../../embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.1", path = "../../embassy-time", features = ["tick-hz-32_768"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"

[profile.release]
debug = 2
